// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cell/> 'middle' prop vertically aligns contents 1`] = `
.c0 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: inline-flex;
  flex-flow: column wrap;
  justify-content: center;
  justify-self: stretch;
}

<div
  className="c0"
  middle={true}
/>
`;

exports[`<Cell/> matches snapshot with default args 1`] = `
.c0 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
}

<div
  className="c0"
/>
`;
